// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`environmental-impact-assessment change pages GET /environmental-impact-assessment/column-two-threshold/change should render the change eia column two threshold page with "No" radio option checked if eiaColumnTwoThreshold is false 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Does the development meet or exceed the threshold or criteria in column 2?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="eia-column-two-threshold" name="eiaColumnTwoThreshold"
                                        type="radio" value="yes">
                                        <label class="govuk-label govuk-radios__label" for="eia-column-two-threshold">Yes</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="eia-column-two-threshold-2" name="eiaColumnTwoThreshold"
                                        type="radio" value="no" checked>
                                        <label class="govuk-label govuk-radios__label" for="eia-column-two-threshold-2">No</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`environmental-impact-assessment change pages GET /environmental-impact-assessment/column-two-threshold/change should render the change eia column two threshold page with "Yes" radio option checked if eiaColumnTwoThreshold is true 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Does the development meet or exceed the threshold or criteria in column 2?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="eia-column-two-threshold" name="eiaColumnTwoThreshold"
                                        type="radio" value="yes" checked>
                                        <label class="govuk-label govuk-radios__label" for="eia-column-two-threshold">Yes</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="eia-column-two-threshold-2" name="eiaColumnTwoThreshold"
                                        type="radio" value="no">
                                        <label class="govuk-label govuk-radios__label" for="eia-column-two-threshold-2">No</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`environmental-impact-assessment change pages GET /environmental-impact-assessment/consulted-bodies-details/change should render the change consulted bodies details page with "No" radio option checked, and no text populated in the textarea, if eiaConsultedBodiesDetails is null 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Did you consult all the relevant statutory consultees about the development?</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div class="govuk-radios" data-module="govuk-radios">
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="eia-consulted-bodies-details-radio"
                                    name="eiaConsultedBodiesDetailsRadio" type="radio" value="yes" data-aria-controls="conditional-eia-consulted-bodies-details-radio">
                                    <label class="govuk-label govuk-radios__label" for="eia-consulted-bodies-details-radio">Yes</label>
                                </div>
                                <div class="govuk-radios__conditional govuk-radios__conditional--hidden"
                                id="conditional-eia-consulted-bodies-details-radio">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label" for="eia-consulted-bodies-details">Consulted relevant statutory consultees details</label>
                                        <textarea class="govuk-textarea"
                                        id="eia-consulted-bodies-details" name="eiaConsultedBodiesDetails" rows="3"></textarea>
                                    </div>
                                </div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="eia-consulted-bodies-details-radio-2"
                                    name="eiaConsultedBodiesDetailsRadio" type="radio" value="no" checked>
                                    <label class="govuk-label govuk-radios__label" for="eia-consulted-bodies-details-radio-2">No</label>
                                </div>
                            </div>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`environmental-impact-assessment change pages GET /environmental-impact-assessment/consulted-bodies-details/change should render the change consulted bodies details page with "Yes" radio option checked, and "test consulted bodies details" populated in the textarea, if eiaConsultedBodiesDetails is "test consulted bodies details" 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Did you consult all the relevant statutory consultees about the development?</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div class="govuk-radios" data-module="govuk-radios">
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="eia-consulted-bodies-details-radio"
                                    name="eiaConsultedBodiesDetailsRadio" type="radio" value="yes" checked
                                    data-aria-controls="conditional-eia-consulted-bodies-details-radio">
                                    <label class="govuk-label govuk-radios__label" for="eia-consulted-bodies-details-radio">Yes</label>
                                </div>
                                <div class="govuk-radios__conditional" id="conditional-eia-consulted-bodies-details-radio">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label" for="eia-consulted-bodies-details">Consulted relevant statutory consultees details</label>
                                        <textarea class="govuk-textarea"
                                        id="eia-consulted-bodies-details" name="eiaConsultedBodiesDetails" rows="3">test consulted bodies details</textarea>
                                    </div>
                                </div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="eia-consulted-bodies-details-radio-2"
                                    name="eiaConsultedBodiesDetailsRadio" type="radio" value="no">
                                    <label class="govuk-label govuk-radios__label" for="eia-consulted-bodies-details-radio-2">No</label>
                                </div>
                            </div>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`environmental-impact-assessment change pages GET /environmental-impact-assessment/requires-environmental-statement/change should render the change eia requires environmental statement page with "No" radio option checked if eiaRequiresEnvironmentalStatement is false 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Did your screening opinion say the development needed an environmental statement?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="eia-requires-environmental-statement"
                                        name="eiaRequiresEnvironmentalStatement" type="radio" value="yes">
                                        <label class="govuk-label govuk-radios__label" for="eia-requires-environmental-statement">Yes</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="eia-requires-environmental-statement-2"
                                        name="eiaRequiresEnvironmentalStatement" type="radio" value="no" checked>
                                        <label class="govuk-label govuk-radios__label" for="eia-requires-environmental-statement-2">No</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`environmental-impact-assessment change pages GET /environmental-impact-assessment/requires-environmental-statement/change should render the change eia requires environmental statement page with "Yes" radio option checked if eiaRequiresEnvironmentalStatement is true 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Did your screening opinion say the development needed an environmental statement?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="eia-requires-environmental-statement"
                                        name="eiaRequiresEnvironmentalStatement" type="radio" value="yes" checked>
                                        <label class="govuk-label govuk-radios__label" for="eia-requires-environmental-statement">Yes</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="eia-requires-environmental-statement-2"
                                        name="eiaRequiresEnvironmentalStatement" type="radio" value="no">
                                        <label class="govuk-label govuk-radios__label" for="eia-requires-environmental-statement-2">No</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`environmental-impact-assessment change pages GET /environmental-impact-assessment/sensitive-area-details/change should render the change sensitive area details page with "No" radio option checked, and no text populated in the textarea, if eiaSensitiveAreaDetails is null 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Is the development in, partly in, or likely to affect a sensitive area?</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div class="govuk-radios" data-module="govuk-radios">
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="eia-sensitive-area-details-radio"
                                    name="eiaSensitiveAreaDetailsRadio" type="radio" value="yes" data-aria-controls="conditional-eia-sensitive-area-details-radio">
                                    <label class="govuk-label govuk-radios__label" for="eia-sensitive-area-details-radio">Yes</label>
                                </div>
                                <div class="govuk-radios__conditional govuk-radios__conditional--hidden"
                                id="conditional-eia-sensitive-area-details-radio">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label" for="eia-sensitive-area-details">In, partly in, or likely to affect a sensitive area details</label>
                                        <textarea                                         class="govuk-textarea" id="eia-sensitive-area-details" name="eiaSensitiveAreaDetails"
                                        rows="3"></textarea>
                                    </div>
                                </div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="eia-sensitive-area-details-radio-2"
                                    name="eiaSensitiveAreaDetailsRadio" type="radio" value="no" checked>
                                    <label class="govuk-label govuk-radios__label" for="eia-sensitive-area-details-radio-2">No</label>
                                </div>
                            </div>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`environmental-impact-assessment change pages GET /environmental-impact-assessment/sensitive-area-details/change should render the change sensitive area details page with "Yes" radio option checked, and "test sensitive area details" populated in the textarea, if eiaSensitiveAreaDetails is "test sensitive area details" 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Is the development in, partly in, or likely to affect a sensitive area?</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div class="govuk-radios" data-module="govuk-radios">
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="eia-sensitive-area-details-radio"
                                    name="eiaSensitiveAreaDetailsRadio" type="radio" value="yes" checked data-aria-controls="conditional-eia-sensitive-area-details-radio">
                                    <label class="govuk-label govuk-radios__label" for="eia-sensitive-area-details-radio">Yes</label>
                                </div>
                                <div class="govuk-radios__conditional" id="conditional-eia-sensitive-area-details-radio">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label" for="eia-sensitive-area-details">In, partly in, or likely to affect a sensitive area details</label>
                                        <textarea                                         class="govuk-textarea" id="eia-sensitive-area-details" name="eiaSensitiveAreaDetails"
                                        rows="3">test sensitive area details</textarea>
                                    </div>
                                </div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="eia-sensitive-area-details-radio-2"
                                    name="eiaSensitiveAreaDetailsRadio" type="radio" value="no">
                                    <label class="govuk-label govuk-radios__label" for="eia-sensitive-area-details-radio-2">No</label>
                                </div>
                            </div>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
